force-app/main/default/objects/NexusSlackApproval__e/NexusSlackApproval__e.object-meta.xml
<CustomObject>
    <label>Nexus Slack Approval</label>
    <pluralLabel>Nexus Slack Approvals</pluralLabel>
</CustomObject>