force-app/main/default/objects/NexusSlackApproval__e/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <label>Quote Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>