force-app/main/default/objects/NexusSlackApproval__e/fields/SalesNote__c.field-meta.xml
<CustomField>
    <fullName>SalesNote__c</fullName>
    <label>Sales Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>