force-app/main/default/objects/NexusSlackApproval__e/fields/ValidityDays__c.field-meta.xml
<CustomField>
    <fullName>ValidityDays__c</fullName>
    <label>Validity Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>